--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
   <body>
     <a href="calculator.html">Calculator</a>
     <a href="todo.html">Todo</a>
+    <a href="lms.html">LMS</a>
   </body>
 </html>
