--- a/lms.html
+++ b/lms.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <div class="well col-md-offset-3 col-md-6">
+      <div class="row align-items-center justify-content-center" style="height: 100vh;">
+        <div class="well col-md-offset-3 col-md-4">
           <form
             action=""
             method="post"
