--- a/login.html
+++ b/login.html
@@ -16,9 +16,9 @@
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="well col-md-offset-3 col-md-6">
+    <div class="container ">
+      <div class="row justify-content-center align-items-center"  style="height: 100vh;">
+        <div class="well col-md-offset-3 col-md-4">
           <form
             action=""
             method="post"
